--- a/package.json
+++ b/package.json
@@ -16,7 +16,18 @@
     "ethers": "^5.5.4",
     "next": "12.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "@self.id/core": "^0.2.0",
+    "@self.id/web": "^0.2.0",
+    "3id-did-provider": "^1.1.1",
+    "cors": "^2.8.5",
+    "dids": "^3.3.0",
+    "form-data": "^4.0.0",
+    "minimist": "^1.2.6",
+    "web3.storage": "^4.4.0",
+    "@3id/connect": "^0.2.5",
+    "@ceramicnetwork/http-client": "^1.5.2",
+    "@ceramicstudio/idx": "^0.12.2"
   },
   "devDependencies": {
     "eslint": "8.10.0",
